--- a/Project.toml
+++ b/Project.toml
@@ -80,7 +80,7 @@ Requires = "1"
 SpecialFunctions = "0.10, 1, 2"
 Static = "0.6, 0.7, 0.8"
 StaticArraysCore = "1"
-Statistics = "1"
+Statistics = "1.8"
 StatsBase = "0.31,0.32,0.33, 0.34"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
@@ -88,7 +88,7 @@ TransformVariables = "0.8"
 TypedTables = "1"
 VLBILikelihoods = "0.2"
 VLBISkyModels = "^0.3.1"
-julia = "^1.6"
+julia = "1.8"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
