--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -28,10 +28,12 @@ DocStringExtensions = "0.8, 0.9"
 JLD2 = "0.4"
 LogDensityProblems = "2"
 LogDensityProblemsAD = "1"
+Random = "1.8"
 Reexport = "1"
+Serialization = "1.8"
 StatsBase = "0.32, 0.33, 0.34"
 TypedTables = "1"
-julia = "1.7"
+julia = "1.8"
 
 [extras]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
