--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -15,9 +15,10 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 AbstractMCMC = "3, 4"
 Comrade = "^0.7.5, 0.8, 0.9"
 Dynesty = "0.3"
+Random = "1.8"
 Reexport = "1"
 TypedTables = "1"
-julia = "1.7"
+julia = "1.8"
 
 [extras]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
