--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -16,6 +16,7 @@ AbstractMCMC = "3, 4"
 Comrade = "0.7, 0.8, 0.9"
 NestedSamplers = "0.8"
 Reexport = "1"
+Random = "1.8"
 TypedTables = "1"
 julia = "1.7"
 
