--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -24,6 +24,7 @@ StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
