--- a/Project.toml
+++ b/Project.toml
@@ -54,7 +54,7 @@ ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
-AbstractMCMC = "3, 4"
+AbstractMCMC = "3, 4, 5"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 AxisKeys = "0.2"
