--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -20,8 +20,8 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-AbstractMCMC = "3,4"
-AdvancedHMC = "0.4"
+AbstractMCMC = "3,4,5"
+AdvancedHMC = "0.5, 0.6"
 ArgCheck = "2"
 Comrade = "0.7, 0.8, 0.9"
 DocStringExtensions = "0.8, 0.9"
