--- a/lib/ComradeAdaptMCMC/Project.toml
+++ b/lib/ComradeAdaptMCMC/Project.toml
@@ -11,7 +11,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-AbstractMCMC = "3, 4"
+AbstractMCMC = "3, 4, 5"
 AdaptiveMCMC = "0.1"
 Comrade = "0.7,0.8, 0.9"
 Random = "1.8"
