--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ ArgCheck = "2"
 AstroTime = "0.6,0.7"
 AxisKeys = "0.2"
 ChainRulesCore = "1"
-ComradeBase = "0.5"
+ComradeBase = "^0.5.6"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
@@ -69,7 +69,7 @@ FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
 LogDensityProblems = "2"
-Makie = "0.19"
+Makie = "0.20"
 NamedTupleTools = "0.13,0.14"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
