--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ ArgCheck = "2"
 AstroTime = "0.6,0.7"
 AxisKeys = "0.2"
 ChainRulesCore = "1"
-ComradeBase = "^0.5.6"
+ComradeBase = "^0.5.6, 0.6"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
