--- a/Project.toml
+++ b/Project.toml
@@ -1,17 +1,17 @@
 name = "Comrade"
 uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
-version = "0.9.0"
+version = "0.9.1"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
-AxisKeys = "94b1ba4f-4ee9-5380-92f1-94cde586c3c5"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
@@ -57,9 +57,8 @@ ComradePyehtimExt = "Pyehtim"
 AbstractMCMC = "3, 4, 5"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
-AxisKeys = "0.2"
 ChainRulesCore = "1"
-ComradeBase = "^0.5.6"
+ComradeBase = "0.6"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
@@ -90,7 +89,7 @@ Tables = "1"
 TransformVariables = "0.8"
 TypedTables = "1"
 VLBILikelihoods = "^0.2.1"
-VLBISkyModels = "^0.3.1"
+VLBISkyModels = "0.4"
 julia = "1.8"
 
 [extras]
