--- a/examples/GeometricModeling/Project.toml
+++ b/examples/GeometricModeling/Project.toml
@@ -9,6 +9,7 @@ Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 
@@ -18,7 +19,7 @@ Comrade = "0.9"
 ComradeOptimization = "0.1"
 Distributions = "0.25"
 OptimizationBBO = "0.1"
-Pigeons = "0.2"
+Pigeons = "0.3"
 Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
