--- a/examples/GeometricModeling/Project.toml
+++ b/examples/GeometricModeling/Project.toml
@@ -18,8 +18,8 @@ CairoMakie = "0.11"
 Comrade = "0.9"
 ComradeOptimization = "0.1"
 Distributions = "0.25"
-OptimizationBBO = "0.1"
-Pigeons = "0.3"
+OptimizationBBO = "0.2"
+Pigeons = "0.3, 0.4"
 Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
