--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -33,6 +33,7 @@ jobs:
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1'
+      - uses: julia-actions/cache@v1
       - name: Install docs dependencies
         run: julia --project=docs -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(url="https://github.com/ptiede/ComradeBase.jl"), PackageSpec(path=joinpath(pwd(), "lib/ComradeAHMC")), PackageSpec(path=joinpath(pwd(), "lib/ComradeOptimization")), PackageSpec(path=joinpath(pwd(), "lib/ComradeDynesty")), PackageSpec(path=joinpath(pwd(), "lib/ComradeNested")), PackageSpec(path=joinpath(pwd(), "lib/ComradeAdaptMCMC"))]); Pkg.instantiate()'
       - name: Build Tutorials
