--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -24,7 +24,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 AbstractMCMC = "4,5"
 AdvancedHMC = "0.5, 0.6"
 ArgCheck = "2"
-Comrade = "0.7, 0.8, 0.9"
+Comrade = "^0.9.3"
 DocStringExtensions = "0.8, 0.9"
 JLD2 = "0.4"
 LogDensityProblems = "2"
