--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -21,6 +21,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
+Accessors = "0.1"
 AbstractMCMC = "4,5"
 AdvancedHMC = "0.5, 0.6"
 ArgCheck = "2"
