--- a/Project.toml
+++ b/Project.toml
@@ -61,7 +61,7 @@ ChainRulesCore = "1"
 ComradeBase = "0.6"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
-DimensionalData = "0.25"
+DimensionalData = "0.25, 0.26"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 Enzyme = "0.11"
