--- a/examples/StokesIImaging/Project.toml
+++ b/examples/StokesIImaging/Project.toml
@@ -4,7 +4,6 @@ Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 ComradeAHMC = "a4336a5c-78bc-4363-8a90-ce3fa9d3abe4"
 ComradeOptimization = "26988f03-70df-4135-959e-06268cc6415a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
@@ -12,16 +11,17 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
+VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CairoMakie = "0.11"
 Comrade = "0.9"
-ComradeAHMC = "0.4"
+ComradeAHMC = "0.5"
 ComradeOptimization = "0.1"
 Distributions = "0.25"
-DistributionsAD = "0.6"
 Measurements = "2"
 OptimizationOptimJL = "0.1"
 Pkg = "1"
@@ -29,4 +29,3 @@ Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
 VLBIImagePriors = "0.7"
-Zygote = "0.6"
