--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.9.3"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
