--- a/Project.toml
+++ b/Project.toml
@@ -89,7 +89,7 @@ StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.8"
 TypedTables = "1"
-VLBILikelihoods = "^0.2.1"
+VLBILikelihoods = "0.2.1 - 0.2.3"
 VLBISkyModels = "0.4"
 julia = "1.8"
 
